Make sure to many files open problem is very unlikely to happen.

BUG: 141454


svn path=/trunk/extragear/network/ktorrent/; revision=640069